fix: play button alignment  issue

--- a/src/components/ColumnTwo/TrackListRow/ImagePlayButton.module.css
+++ b/src/components/ColumnTwo/TrackListRow/ImagePlayButton.module.css
@@ -19,13 +19,17 @@
 }
 
 .playBtn{
-  display: var(--playBtn-hover);
-  position: absolute;
   width: 100%;
   height: 100%;
-  
   border-radius: 0;
   background-color: rgba(0, 0, 0, 0.2);
+  
+  display: var(--playBtn-hover);
+  
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 3;
 }
 
 .playBtn svg{
